<resources>
    <string name="app_name">QRCheckIn</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_events">My Events</string>
    <string name="nav_hosted_events">Hosted Events</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="qr_preview">QR_Preview</string>
    <string name="add_event">Add Event</string>
    <string name="event_banner">The Event Banner</string>
    <string name="create_event_description_qr">Create the Event Description QR Code</string>
    <string name="create_event_checkin_qr">Create the Event Checkin QR Code</string>
    <string name="create_event_location">Select the Events Location</string>
    <string name="nav_explore_events">Explore Events</string>
    <string name="nav_all_profile">All Profiles</string>
    <string name="nav_all_event">All Events</string>
    <string name="nav_all_image">All Images</string>
    <string name="unsign_up">Withdraw Sign Up</string>
    <string name="sign_up">Sign Me Up</string>
    <string name="event_full">Event Already Full</string>
    <string name="delete_image_warning">Are you sure you want to delete this image?</string>
    <string name="delete_event_warning">Are you sure you want to delete the following event and all its logs?</string>
</resources>