<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.qrcheckin.user.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.qrcheckin.user.myevent.EventFragment"
        android:label="@string/nav_my_events"
        tools:layout="@layout/fragment_event">
        <action
            android:id="@+id/action_nav_event_to_nav_view_event"
            app:destination="@id/nav_view_event" />
    </fragment>

    <fragment
        android:id="@+id/nav_host_event"
        android:name="com.example.qrcheckin.user.hostedevent.HostedEventFragment"
        android:label="@string/nav_hosted_events"
        tools:layout="@layout/fragment_hosted_event">
        <action
            android:id="@+id/action_nav_event_to_nav_create_event"
            app:destination="@id/nav_create_event" />
        <action
            android:id="@+id/action_nav_host_event_to_nav_edit_event"
            app:destination="@id/nav_edit_event"/>
    </fragment>

    <fragment
        android:id="@+id/nav_edit_event"
        android:name="com.example.qrcheckin.user.editevent.EditEventFragment"
        android:label="Edit Events"
        tools:layout="@layout/fragment_edit_event">
        <action
            android:id="@+id/action_nav_edit_event_to_nav_attendee_sign_up"
            app:destination="@id/nav_attendees_signed_up" />
    </fragment>

    <fragment
        android:id="@+id/nav_explore_event"
        android:name="com.example.qrcheckin.user.exploreevent.ExploreEventFragment"
        android:label="@string/nav_explore_events"
        tools:layout="@layout/fragment_explore_event">
        <action
            android:id="@+id/action_nav_explore_event_to_nav_view_event"
            app:destination="@id/nav_view_event" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.qrcheckin.user.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>


    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.qrcheckin.user.notifications.NotificationsFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_all_event"
        android:name="com.example.qrcheckin.admin.allevents.AllEventsFragment"
        android:label="@string/nav_all_event"
        tools:layout="@layout/fragment_all_events" />

    <fragment
        android:id="@+id/nav_all_images"
        android:name="com.example.qrcheckin.admin.allimages.AllImagesFragment"
        android:label="@string/nav_all_event"
        tools:layout="@layout/fragment_all_images" />

    <fragment
        android:id="@+id/nav_all_profile"
        android:name="com.example.qrcheckin.admin.allprofiles.AllProfilesFragment"
        android:label="@string/nav_all_event"
        tools:layout="@layout/fragment_all_profiles" />

    <fragment
        android:id="@+id/nav_view_event"
        android:name="com.example.qrcheckin.user.viewEvent.ViewEventFragment"
        android:label="view_event"
        tools:layout="@layout/fragment_view_event" />

    <fragment
        android:id="@+id/nav_create_event"
        android:name="com.example.qrcheckin.user.createevent.CreateEventFragment"
        android:label="create_event"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/nav_attendees_signed_up"
        android:name="com.example.qrcheckin.user.attendeessignedup.AttendeesSignedUpFragment"
        android:label="attendees_signed_up"
        tools:layout="@layout/fragment_attendees_signed_up">
    </fragment>

</navigation>